--- a/mission/index.html
+++ b/mission/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <!-- Theme selector dropdown -->
-  <select id="theme">
+  <label for="theme" style="display: block; margin-bottom: 10px;">Choose theme:</label>
+  <select id="theme" name="theme">
     <option value="light">Light</option>
     <option value="dark">Dark</option>
   </select>
@@ -26,23 +27,20 @@
     <p class="italic">The university does this by:</p>
     
     <ol>
-      <li>
-        Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, cultural, and social environment.
-      </li>
-      <li>
-        Providing a high-quality education that prepares students of diverse interests and abilities for lifelong learning and employment.
-      </li>
-      <li>
-        Serving as many students as possible within resource constraints.
-      </li>
-      <li>
-        Delivering education that is affordable for students and the Church.
-      </li>
+      <li>Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, cultural, and social environment.</li>
+      <li>Providing a high-quality education that prepares students of diverse interests and abilities for lifelong learning and employment.</li>
+      <li>Serving as many students as possible within resource constraints.</li>
+      <li>Delivering education that is affordable for students and the Church.</li>
     </ol>
 
-    <!-- Logo image (use correct path) -->
     <div class="logo">
-      <img id="logo" src="/mission/byui-logo_blue.webp" alt="BYU-Idaho Logo" />
+      <img
+        id="logo"
+        src="/mission/byui-logo_blue.webp"
+        alt="BYU-Idaho Logo"
+        width="300"
+        height="150"
+      />
     </div>
   </div>
 </body>
