--- a/recipes/rb2.html
+++ b/recipes/rb2.html
@@ -27,7 +27,7 @@
 
   <main>
     <section class="recipe-card">
-      <img src="image/apple-crisp.jpg" alt="Apple Crisp dessert" />
+      <img src="image/apple-crisp.jpeg" alt="Apple Crisp dessert" />
       <div class="recipe-details">
         <span class="tag">Dessert Fruit</span>
         <h2>Apple Crisp</h2>
@@ -57,6 +57,6 @@
     </div>
   </footer>
 
-  <script src="recipes.js"></script>
+  <script src="rb2.js"></script>
 </body>
 </html>
