--- a/WDD131 Final Project/RecipeBook Website/recipe.html
+++ b/WDD131 Final Project/RecipeBook Website/recipe.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="recipe.html">All Recipes</a>
-      <a href="#">Favorites</a>
+      <a href="favorites.html">Favorites</a>
       <a href="#">About</a>
     </nav>
   </header>
