--- a/temporary project folder/index.html
+++ b/temporary project folder/index.html
@@ -47,7 +47,8 @@
         <button type="submit">Login</button>
       </form>
 
-      <p id="login-message"></p>
+      <!-- ✅ FIXED: message now hidden on page load -->
+      <p id="login-message" style="display: none;"></p>
 
       <div id="captcha-container" style="display: none;">
         <label for="captcha-input">Enter the code: <strong id="captcha-code">AB12</strong></label>
